Fixed alignment and margins on home page

--- a/style.css
+++ b/style.css
@@ -438,6 +438,11 @@ label {
 }
 /*End Carousel*/
 
+.section-amenities {
+	display: inline-block;
+	padding-bottom: 20px;
+	width: 100%;
+}
 
 /* COLUMN*/
 
@@ -447,8 +452,9 @@ label {
 
 /*Maps*/
 
-.maps {
-	float: center;
+.section1 {
+	display: inline-block;
+	margin-left: 19%;
 }
 
 .content {
@@ -456,6 +462,12 @@ label {
 	padding-right: 150px;
 }
 
+/*Review*/
+
+#button1 {
+	margin-top: -25px;
+	text-align: center;
+}
 
 /*Score circle*/
 
